--- a/PRA_Frontend/src/css/login.css
+++ b/PRA_Frontend/src/css/login.css
@@ -45,7 +45,7 @@
     }
 
     .btn-login {
-      background-color: #fff;
+      background-color: #6b027d;
       color: #070808;
       border-radius: 25px;
       font-weight: bold;
