--- a/PRA_Frontend/src/css/productByCat.css
+++ b/PRA_Frontend/src/css/productByCat.css
@@ -24,16 +24,40 @@
   cursor: pointer;
 }
 
+.add-to-cart-btn {
+  position: absolute;
+  bottom: 10px;
+  left: 78px;
+  background-color: #f7691d;
+  color: white;
+  border: none;
+  padding: 8px 14px;
+  border-radius: 6px;
+  cursor: pointer;
+  font-size: 14px;
+  font-weight: bold;
+  transition: all 0.3s ease;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.add-to-cart-btn:hover {
+  background-color: #cc3a00;
+  
+}
+
+.product-card {
+  position: relative; /* ✅ required for button absolute positioning */
+  padding-bottom: 50px; /* space for button */
+}
+
+
 .product-card:hover {
-  transform: translateY(-10px);
+  transform: scale(1.05);
   box-shadow: 0 12px 24px rgba(0, 0, 0, 0.2);
 }
 
-.highlight-card {
-  border: 2px solid #1abc9c;
-  box-shadow: 0 0 25px rgba(26, 188, 156, 0.4);
-  transform: scale(1.03);
-}
 
 .product-img {
   width: 100%;
@@ -62,15 +86,16 @@
   font-size: 25px;
   font-weight: 600;
   color: #34495e;
-  margin-bottom: 10px;
-  min-height: 48px;
+  margin-bottom: 4px;
+  /* min-height: 48px; */
 }
 
 .price-box {
   display: flex;
-  align-items: center;
+  align-items: start;
+  justify-content: start;
   gap: 10px;
-  margin-bottom: 8px;
+  margin-bottom: 4px;
 }
 
 .original-price {
@@ -88,7 +113,7 @@
 .you-save {
   font-size: 14px;
   color: #e67e22;
-  margin-bottom: 8px;
+  margin-bottom: 4px;
 }
 
 .unit {
