--- a/PRA_Frontend/src/css/login.css
+++ b/PRA_Frontend/src/css/login.css
@@ -72,8 +72,10 @@
       text-decoration: underline;
     }
 
-    .error-msg {
-      color: #ffb3b3;
+    .errormsg {
+      color: red;
       text-align: center;
       margin-bottom: 15px;
+      font-weight: bold;
+      font-size: 24px;
     }
