--- a/PRA_Frontend/src/css/addCategory.css
+++ b/PRA_Frontend/src/css/addCategory.css
@@ -1,5 +1,4 @@
 .add-category-container {
-  background: linear-gradient(to right, #ffc3ff, #fdb8ff); /* Login-style gradient */
   min-height: 100vh;
   display: flex;
   justify-content: center;
@@ -34,39 +33,17 @@
   background-color: #fff;   /* white background so it's not transparent */
 }
 
-.form-control:focus {
-  border-color: #ff2dfc;    /* green border when focused */
-  box-shadow: 0 0 5px rgba(255, 0, 200, 0.5); /* subtle glow */
-}
-
-
-/* Primary Add button */
-.btn-custom {
-  background: #ff35f5;
-  color: #ffffff;
-  border-radius: 25px;
-  padding: 10px 25px;
-  font-weight: bold;
-  transition: 0.3s ease-in-out;
-  border: none;
-}
-
-.btn-custom:hover {
-  background-color: #a000a6e4;
-  color: #fff;
-}
-
 /* Cancel button */
-.btn-secondary {
+/* .btn-secondary {
   border-radius: 25px;
   padding: 10px 20px;
   background: #ff35f5;
   border: none;
-}
+} */
 
 /* View button */
 .btn-view {
-  background-color: #536dffe4;
+  background: linear-gradient(135deg, #3b5998 0%, #ff4d6d 100%);
   color: #ffffff;
   border-radius: 25px;
   padding: 10px 25px;
@@ -74,13 +51,7 @@
   text-decoration: none;
 }
 
-.btn-secondary:hover {
-  background-color: #8100d7;
-  color: #fff;
-}
-
-.btn-view:hover {
-  background-color: #cb00d2;
+.btn-view:hover, .btn-secondary:hover {
   color: #fff;
 }
 
