--- a/PRA_Frontend/src/css/login.css
+++ b/PRA_Frontend/src/css/login.css
@@ -9,14 +9,14 @@
     } 
 
 .login-container {
-      background: rgb(255, 152, 255);
+      background: linear-gradient(135deg, #3b5998 0%, #ff4d6d 100%);
       /* backdrop-filter: blur(10px); */
       border-radius: 20px;
       padding: 40px 30px;
       width: 100%;
       max-width: 420px;
       box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.5);
-      color: #e9e9e9;
+      color: #252525;
     }
    
     .login-container h2{
@@ -40,12 +40,11 @@
     }
 
     .form-group label {
-      font-weight: 500;
-      color: rgb(0, 0, 0);
+      color: rgb(255, 255, 255);
     }
 
     .btn-login {
-      background-color: #6b027d;
+      background-color: #00000069;
       color: #070808;
       border-radius: 25px;
       font-weight: bold;
@@ -56,7 +55,7 @@
     }
 
     .btn-login:hover {
-      background-color: #cb00d2;
+      background: linear-gradient(120deg, #ff123e, #3662c0); 
       color: #fff;
     }
 
