--- a/PRA_Frontend/src/css/register.css
+++ b/PRA_Frontend/src/css/register.css
@@ -7,12 +7,11 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background: #f1f1f1;
 }
 
 /* Form container */
 .register-container {
-  background: rgb(255, 152, 255);
+  background: linear-gradient(135deg, #3b5998 0%, #ff4d6d 100%);
   border-radius: 20px;
   padding: 40px 30px;
   width: 100%;
@@ -61,7 +60,8 @@
 }
 
 .btn-register:hover {
-  background-color: #cb00d2;
+      background: linear-gradient(120deg, #ff123e, #3662c0); 
+
   color: #fff;
 }
 
