--- a/PRA_Frontend/src/css/viewCategories.css
+++ b/PRA_Frontend/src/css/viewCategories.css
@@ -4,7 +4,6 @@
   justify-content: center;
   align-items: flex-start;
   padding: 50px 20px;
-  background: linear-gradient(to right, #fec5ff, #e9ecef);
   min-height: 100vh;
 }
 
@@ -128,12 +127,8 @@
 }
 
 .btn-add {
-  background-color: #ff6fe9;
+  background: linear-gradient(135deg, #3b5998 0%, #ff4d6d 100%);
   color: #fff;
-}
-.btn-add:hover {
-  background-color: #c401bb;
-  color: white;
 }
 
 /* Dropdown */
