--- a/PRA_Frontend/src/css/adminDashboard.css
+++ b/PRA_Frontend/src/css/adminDashboard.css
@@ -17,6 +17,7 @@
   align-items: center;
 }
 
+
 .navbar-brand img {
   border-radius: 50%;
   width: 48px;
@@ -26,6 +27,12 @@
 
 .navbar-brand img:hover {
   transform: scale(1.12);
+}
+
+.fw-bold{
+  color: white;
+  border: none;
+  padding: 0;
 }
 
 /* My Profile Button */
@@ -65,6 +72,7 @@
 
 .sidebar-item {
   margin-bottom: 0.8rem;
+  background-color: #182b4f;
 }
 
 .sidebar-link {
@@ -195,5 +203,5 @@
 
 @keyframes fadeIn {
   from { opacity: 0; }
-  to { opacity: 1; }
+  to {opacity:1;}
 }
