--- a/PRA_Frontend/src/css/viewProduct.css
+++ b/PRA_Frontend/src/css/viewProduct.css
@@ -1,14 +1,14 @@
 .view-products h2 {
   text-align: center;
   font-size: 32px;
-  color: #2c3e50;
+  color: #ffffff;
   margin-bottom: 30px;
   margin-top: 30px;
 }
 
 .view-products h3 {
   margin-top: 50px;
-  color: #1abc9c;
+  color: #ffffff;
   font-size: 26px;
   border-left: 6px solid #1abc9c;
   padding-left: 15px;
